adm api improvements

--- a/config.json
+++ b/config.json
@@ -41,7 +41,7 @@
   "logger": {
     "level": "info",
     "disableCaller": false,
-    "disableStacktrace": false,
+    "disableStacktrace": true,
     "encoding": "console",
     "outputPaths": [
       "stdout",
