--- a/docker.config.json
+++ b/docker.config.json
@@ -1,14 +1,29 @@
 {
   "analysis": {
-    "serveraddress": "ressims.iota.cafe:188",
-    "serverport": 0
+    "client": {
+      "serverAddress": "ressims.iota.cafe:188"
+    },
+    "server": {
+      "port": 0
+    },
+    "httpServer": {
+      "bindAddress": "0.0.0.0:80"
+    }
   },
   "autopeering": {
-    "address": "0.0.0.0",
-    "entrynodes": [
+    "entryNodes": [
       "V8LYtWWcPYYDTTXLeIEFjJEuWlsjDiI0+Pq/Cx9ai6g=@116.202.49.178:14626"
     ],
     "port": 14626
+  },
+  "dashboard": {
+    "bindAddress": "127.0.0.1:8081",
+    "dev": false,
+    "basic_auth": {
+      "enabled": false,
+      "username": "goshimmer",
+      "password": "goshimmer"
+    }
   },
   "database": {
     "directory": "mainnetdb"
@@ -16,20 +31,42 @@
   "gossip": {
     "port": 14666
   },
+  "graph": {
+    "bindAddress": "127.0.0.1:8082",
+    "domain": "",
+    "networkName": "GoShimmer",
+    "socketIOPath": "socket.io-client/dist/socket.io.js",
+    "webrootPath": "IOTAtangle/webroot"
+  },
   "logger": {
-    "Level": "info",
-    "DisableCaller": true,
-    "DisableStacktrace": false,
-    "Encoding": "console",
-    "OutputPaths": [
+    "level": "info",
+    "disableCaller": false,
+    "disableStacktrace": true,
+    "encoding": "console",
+    "outputPaths": [
       "stdout",
       "goshimmer.log"
     ],
-    "DisableEvents": true
+    "disableEvents": true,
+    "remotelog": {
+      "serverAddress": "remotelog.goshimmer.iota.cafe:5213"
+    }
+  },
+  "network": {
+    "bindAddress": "0.0.0.0",
+    "externalAddress": "auto"
   },
   "node": {
     "disablePlugins": [],
     "enablePlugins": []
+  },
+  "webapi": {
+    "auth": {
+      "password": "goshimmer",
+      "privateKey": "",
+      "username": "goshimmer"
+    },
+    "bindAddress": "127.0.0.1:8080"
   },
   "qnode": {
     "udpPort": 4000,
