--- a/config.json
+++ b/config.json
@@ -69,7 +69,7 @@
     "bindAddress": "127.0.0.1:8080"
   },
   "qnode": {
-    "udpPort": 4000,
+    "port": 4000,
     "mockTangleIpAddr": "127.0.0.1",
     "mockTanglePort": 1000
   }
