--- a/DockerfileQnode
+++ b/DockerfileQnode
@@ -1,5 +1,8 @@
-FROM golang:1.13-alpine AS build
+FROM golang:1.13-alpine
 RUN apk add --no-cache git gcc g++
+
+# Get Env Variable From Docker Compose
+ARG NODE_DIR
 
 # Set the current Working Directory inside the container
 RUN mkdir /goshimmer
@@ -12,3 +15,13 @@ RUN go mod download
 
 # Copy everything from the current directory to the PWD(Present Working Directory) inside the container
 COPY . .
+
+# Build
+RUN go build
+
+# Change Directory
+WORKDIR /goshimmer/${NODE_DIR}
+
+EXPOSE ${NODE_PORT}
+
+ENTRYPOINT ["../../goshimmer"]
