--- a/qnodes/node1/config.json
+++ b/qnodes/node1/config.json
@@ -70,7 +70,7 @@
   },
   "qnode": {
     "port": 4000,
-    "portPubTx": 3000,
+    "mockPubTxPort": 3000,
     "mockTangleIpAddr": "127.0.0.1",
     "mockTanglePort": 1000
   }
