--- a/qnodes/node4/config.json
+++ b/qnodes/node4/config.json
@@ -66,11 +66,11 @@
       "privateKey": "",
       "username": "goshimmer"
     },
-    "bindAddress": "127.0.0.1:8080"
+    "bindAddress": "127.0.0.1:8083"
   },
   "qnode": {
     "port": 4003,
-    "portPubTx": 3003,
+    "mockPubTxPort": 3003,
     "mockTangleIpAddr": "127.0.0.1",
     "mockTanglePort": 1003
   }
