--- a/.github/workflows/qnode_test.yml
+++ b/.github/workflows/qnode_test.yml
@@ -24,6 +24,9 @@ jobs:
         go build
         ./goshimmer &\
         go test ./plugins/qnode/...
+        go run plugins/qnode/tools/newsc/main.go new ./plugins/qnode/tools/newsc/contract.json
+        go run plugins/qnode/tools/newsc/main.go get ./plugins/qnode/tools/newsc/contract.json
+        go run plugins/qnode/tools/newsc/main.go list http://127.0.0.1:8080
 
     - name: Build GoShimmer Test
       if: github.action == 'closed' && github.pull_request.merged == 'true'
